--- a/detail.css
+++ b/detail.css
@@ -1,348 +1,256 @@
-/* Global styles
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
+* {
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 0;
 }
 
 .container {
-    max-width: 1268px;
-    margin: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    max-width: 1440px;
 }
 
-/* Detail section styles */
-
-.detail {
+header {
+    height: 100px;
+    background-color: rgb(255, 255, 255);
+    margin-top: 30px;
     display: flex;
-    justify-content: center;
-    align-items: center; /* Căn giữa phần tử detail từ trên xuống */
-    min-height: 100vh; /* Đảm bảo chiều cao tối thiểu cho phần detail */
-    background-color: #f4f4f4; /* Màu nền cho phần detail */
-}
-
-.detail-image-container {
-    max-width: 600px; /* Độ rộng tối đa của phần tử chứa ảnh */
-}
-
-.detail-image {
-    width: 100%;
-    height: auto;
-    display: block; /* Loại bỏ khoảng trắng dưới ảnh */
-    margin: 0 auto; /* Căn giữa ảnh trong phần tử chứa */
-}
-
-/* Header styles */
-.header-inner {
-    padding: 28px 0;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
+
 }
 
-.header-items {
-    display: none;
+.logoHeader {
+    display: flex;
 }
 
-@media (min-width: 992px) {
-    .header-items {
-        display: flex;
-        justify-content: flex-end;
-    }
+.logoHeader p {
+    font-size: x-large;
+    font-weight: bolder;
 }
 
-.button-mobile {
-    text-align: right;
-    display: inline-block;
+.menu ul {
+    margin-left: 100px;
+    display: flex;
 }
 
-@media (min-width: 992px) {
-    .button-mobile {
-        display: none;
-    }
-}
-
-.main-menu {
-    display: none;
-}
-
-@media (min-width: 992px) {
-    .main-menu {
-        display: block;
-    }
-}
-
-.main-menu__list {
-    display: block;
-    margin: 0;
-    padding: 0;
+.menu ul li {
+    margin: 20px;
     list-style: none;
 }
 
-@media (min-width: 992px) {
-    .main-menu__list {
-        display: flex;
-    }
-}
-
-.main-menu__link {
-    font-size: 18px;
-    display: block;
-    padding: 10px 35px;
+.menu ul li a {
     text-decoration: none;
-    color: #000;
+    color: black;
 }
 
-.main-menu__link:hover {
-    background: #000;
-    color: #fff;
+.iconNavigate i {
+    margin: 20px;
 }
 
-/* Banner styles */
-.banner {
-    margin-bottom: 17px;
+.detai-navigate {
+    background-color: #F9F1E7;
 }
 
-.banner__img {
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
+.detai-navigate .child {
+    margin-top: 15px;
+    display: flex;
+    height: 100px;
+    align-items: center;
+    width: 25%;
+    margin-right: 1000px;
 }
 
-/* Section heading styles */
-.section-heading {
-    border-bottom: 1px solid #000;
-    padding: 17px 0 20px 0;
-    margin-bottom: 57px;
-}
-
-.section-heading__title {
-    font-size: 40px;
-    font-weight: 500;
-    margin: 0;
-    padding: 0;
-}
-
-/* Product list styles */
-.product-list {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 30px;
-}
-
-@media (min-width: 576px) {
-    .product-list {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media (min-width: 768px) {
-    .product-list {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-
-.product-item {
-    position: relative;
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-
-.product-item:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-.product-image {
-    position: relative;
-    overflow: hidden;
-}
-
-.product-sale,
-.product-new {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    border-radius: 100%;
-    width: 48px;
-    height: 48px;
-    line-height: 48px;
+.product-name {
+    border-left: 2px solid #9F9F9F;
+    height: 40px;
+    width: 150px;
     text-align: center;
-    color: #fff;
 }
 
-.product-sale {
-    background: #e97171;
+.product-name p {
+    margin-top: 8px;
 }
 
-.product-new {
-    background: #2ec1ac;
+.page-name {
+    color: #9F9F9F;
 }
 
-.product__thumbnail {
-    transform: scale(1);
-    transition: all 0.3s ease-in-out;
-    width: 100%;
+.detail-product {
+    display: flex;
+    margin-top: 50px;
+    max-width: 90%;
 }
 
-@media (min-width: 768px) {
-    .product__thumbnail {
-        height: 302px;
-    }
+.box-left {
+    line-height: 70px;
 }
 
-.product-item:hover .product__thumbnail {
-    transform: scale(1.1);
+.box-right {
+    width: 80%;
+    margin-left: 90px;
 }
 
-.product-info {
-    padding: 15px;
-    background: #f4f5f7;
+.product_name h2 {
+    font-size: 42px;
+    font-weight: 400;
 }
 
-.product__name {
+.price {
+    margin-top: 10px;
+}
+
+.price h3 {
     font-size: 24px;
-    margin: 0;
-    padding: 0;
+    font-weight: 500;
+    color: #9F9F9F;
 }
 
-.product__link {
-    text-decoration: none;
-    color: #3a3a3a;
+.description p {
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 19.5px;
 }
 
-.product__category {
-    color: #898989;
-    text-decoration: none;
-    display: block;
-    margin: 13px 0;
+.addToCart {
+    margin-top: 50px;
+    margin-right: 30px;
 }
 
-.product-price {
-    display: flex;
-    justify-content: space-between;
-}
-
-.product-price__new {
-    color: #3a3a3a;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.product-item:hover .product-actions {
-    opacity: 1;
-}
-
-.product-actions {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    top: 0;
-    opacity: 0;
-    transition: 0.3s ease-in-out;
-    color: #fff;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
+.addToCart,
+.selectQuantity,
+.compare,
+.add {
     align-items: center;
+    display: flex;
+    height: 65px;
 }
 
-.product-actions > * {
-    margin-bottom: 15px;
-    cursor: pointer;
+.selectQuantity {
+    border: 1px solid #9F9F9F;
+    width: 123px;
+    border-radius: 10px;
 }
 
-.product-actions > button {
-    width: 200px;
-    height: 30px;
+.add,
+.compare {
+    width: 215px;
+    border-radius: 10px;
+    border: 1px solid black;
 }
 
-/* Footer styles */
-.footer {
-    padding: 39px 0;
+.child-parameter {
+    margin: 5px;
+    display: flex;
 }
 
-.footer-list {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 30px;
-}
-
-@media (min-width: 992px) {
-    .footer-list {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-.footer__address {
-    color: #9f9f9f;
-}
-
-.footer-nav {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 30px;
-}
-
-.footer__title {
-    font-size: 16px;
-    color: #9f9f9f;
-    font-weight: normal;
-    margin-bottom: 59px;
-}
-
-.footer-menu-list {
+.child-parameter .p1 {
+    width: 80px;
     margin: 0;
     padding: 0;
-    list-style: none;
 }
 
-.footer-menu-item {
-    margin: 0;
-    bottom: 20px; /* Điều chỉnh khoảng cách giữa các mục menu trong footer */
+.icon,
+.child-parameter p {
+    margin-left: 10px;
+    padding: 0;
 }
 
-.footer-menu-link {
-    text-decoration: none;
-    color: #000;
+.child-parameter a {
+    margin: 10px;
 }
 
-.newsletter__input {
-    border: 1px solid transparent;
-    border-bottom: 1px solid #000;
-    padding: 5px 10px;
+.desciption-section1 .title {
+    display: flex;
+    margin-top: 50px;
+    font-size: 24px;
+    margin-left: 300px;
+    margin-right: 300px;
 }
 
-.newsletter__input:focus {
+.desciption-section1 .title h3 {
+    font-weight: 500;
+}
+
+.desciption {
+    width: 75%;
+    margin-top: 30px;
+    color: #9F9F9F;
+}
+
+.image-des {
+    width: 90%;
+    margin-top: 25px;
+    display: flex;
+}
+
+.products {
+    display: flex;
+}
+
+.card {
+    margin-top: 40px;
+    margin-bottom: 45px;
+    line-height: 35px;
+    background-color: rgb(237, 241, 241);
+}
+
+.text-item,
+.discount {
+    margin-left: 10px;
+
+}
+
+.discount {
+    display: flex;
+    width: 40%;
+    gap: 10px;
+    float: left;
+}
+
+.relatedProducts h2 {
+    margin-top: 50px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 36px;
+}
+
+.more p {
+    font-weight: 600;
+    font-size: 16px;
+    color: #B88E2F;
+    border: 2px solid #B88E2F;
+    display: flex;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    width: 15%;
+}
+footer{
+    display: flex;
+    margin-top: 30px;
+    line-height: 50px;
+    font-weight: 500;
+}
+.copyright{
+    width: 92%;
+}
+.title-footer{
+    font-weight: 700;
+    font-size: 24px;
+}
+.newletter input,button{
     outline: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    margin: 10px;
 }
-
-.newsletter__btn {
-    border: 1px solid transparent;
-    border-bottom: 1px solid #000;
-    padding: 5px 10px;
-    background: none;
-    cursor: pointer;
+input::placeholder{
+    font-weight: 400;
+    color: #9F9F9F;
 }
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-    }
-
-    .left-column, .right-column {
-        width: 100%;
-    }
-
-    .detail {
-        padding: 0 15px; /* Đảm bảo không gian xung quanh phần tử detail trên các thiết bị nhỏ */
-    }
-
-    .detail-image-container {
-        max-width: 100%; /* Đảm bảo ảnh trong phần tử detail không vượt quá kích thước của màn hình */
-    }
-} */
